# seimas_scraper

./: .gitignore  Cargo.toml
migrations/2022-10-06-155230_parliament/: down.sql  up.sql
migrations/2022-10-06-160246_sessions/: up.sql
migrations/2022-10-06-181233_meetings/: up.sql
migrations/2022-10-07-092639_politicians/: down.sql  up.sql
migrations/2022-10-09-125406_meeting_data/: down.sql  up.sql
migrations/2022-10-09-165427_voting_data/: down.sql  up.sql
migrations/2022-10-09-180358_registration_data/: down.sql  up.sql
migrations/2022-10-12-111620_politician_parliament_fix/: down.sql  up.sql
migrations/2022-10-12-133918_votes_functions/: down.sql  up.sql
migrations/2022-10-26-093918_missing_ids_views/: down.sql  up.sql
src/: crawler.rs  main.rs  schema.rs
src/database/: connect.rs
src/models/: mod.rs
src/models/politicians/: politician.rs
src/models/session/: meeting_data.rs  meetings.rs  mod.rs  parliament.rs  registration_data.rs  sessions.rs  voting_data.rs
src/networking/: download.rs  request.rs
src/parser/: mod.rs  util.rs
src/parser/politicians/: mod.rs  politician.rs
src/parser/session/: meeting_data.rs  meetings.rs  mod.rs  parliaments.rs  registration_data.rs  sessions.rs  voting_data.rs
