[package]
name = "politics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
postgres = "0.19"
dotenvy = "0.15"
chrono = "0.4"
async-process = "1.5"
log = "0.4"
env_logger = "0.9"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }

[dependencies.diesel]
version = "2.0"
features = ["numeric", "postgres", "chrono"]
